Build 40
- Added "Orders" tab to right panel

Build 39 (17.05.2013)
- Sky Fortress now have correct fire delay and weapon state display
- Added damage area for all weapons
- Added persistent damage for S.C.A.R.A.B. weapon
- Font class optimizations
- Bug fixes
- Bullet speed corrected
- Unit speed corrected
- Map elements (trees, rocks) now draw dynamically

Build 38 (09.05.2013)
- Added music player (tracks will not be available on GitHub)
- Added ability to change music volume on right panel (at Menu tab)
- Added Invader Troop Transport unit
- Added Plasma Tank unit & PlasmaCannon weapon
- Added Amper unit (without weapon)
- Added Mobile Air Defense unit with its weapon
- Added Recon Drone unit (first fly unit)
- Added Tachion Tank unit and TachyonCannon weapon
- Added S.C.A.R.A.B. unit and its weapon
- Added Cyclone unit and its weapon
- Added Sky Fortress unit
- Added ability for Cyclone to rearm in Rearming Deck
- Added shadows to all units that still not had it
- Added unit generation in progress sound
- Unit rotation function significantly improved
- Code refactoring
- Different bug fixes

Build 37 (01.05.2013)
- Added Rearming Deck building
- Added Rift Creator building (without weapon)
- Unit class changed to support multiple parts
- Bullet animation fixed for all units
- Added first multipart unit: Hover Freighter
- Added Scout Runner unit & Laser Cannon weapon
- Added ability to scroll construction menu on right panel
- Added Bridge Junction, last building for Imperium side
- Small map corrections
- Added "Menu" tab on right panel
- Added ability to change game sounds volume (other settings still have no effect)
- Some code refactoring

Build 36 (20.04.2013)
- Added Air Defense Site building & weapon
- Added Repair Station & added ability to fix non human units
- Added Civilian Vertical Bridge
- Added player start position
- Added Temporal Gate building and all related mouse cursors
- Added ability to teleport units through Temporal Gate